# nuvo_image

./: .gitignore  .rubocop.yml  .travis.yml  Gemfile  README.md  Rakefile  build-ext  build-test  circle.yml  gitclone  nuvo-image.gemspec  nuvo_image.gemspec
ext/nuvo_image/: .gitignore  CMakeLists.txt  extconf.rb  install_manifest.txt
ext/nuvo_image/include/: ClearMemoryProcess.h  CloseProcess.h  CompareImageProcess.h  CropImageProcess.h  Enums.h  FrameImageProcess.h  Gif.h  ImageProcess.h  ImageProcessor.h  JpegImageProcess.h  LosslessImageProcess.h  LossyImageProcess.h  OpenCV.h  ReadImageProcess.h  ResizeImageProcess.h  SSIM.h  VideoImageProcess.h  exif.h  opencv.h  picojson.h
ext/nuvo_image/src/: CompareImageProcess.cpp  CropImageProcess.cpp  Enums.cpp  FrameImageProcess.cpp  Gif.cpp  ImageProcess.cpp  ImageProcessor.cpp  JpegImageProcess.cpp  LosslessImageProcess.cpp  LossyImageProcess.cpp  ReadImageProcess.cpp  ResizeImageProcess.cpp  SSIM.cpp  VideoImageProcess.cpp  exif.cpp  main.cpp
ext/nuvo_image_process/: CMakeLists.txt  extconf.rb
ext/nuvo_image_process/include/: ClearMemoryProcess.h  CropImageProcess.h  Enums.h  ExitProcess.h  ImageProcess.h  ImageProcessor.h  JpegImageProcess.h  ReadImageProcess.h  ResizeImageProcess.h
ext/nuvo_image_process/src/: ClearMemoryProcess.cpp  Enums.cpp  ImageProcessor.cpp  ReadImageProcess.cpp  ResizeImageProcess.cpp  main.cpp
lib/: nuvo-image.rb  nuvo_image.rb
lib/nuvo_image/: carrier_wave.rb  process.rb  version.rb
spec/: install_manifest.txt  nuvo_image_test.rb
